@@ -48,7 +48,7 @@ def test_ac_copy():
                                       deltat=1,
                                       normalize=True,
                                       copy=True,
-                                      dtype=np.float_)
+                                      dtype=np.float64)
         res1.append(r)
 
     res2 = []
@@ -58,7 +58,7 @@ def test_ac_copy():
                                       deltat=1,
                                       normalize=True,
                                       copy=False,
-                                      dtype=np.float_)
+                                      dtype=np.float64)
         res2.append(r)
 
     # simple test if result is the same
@@ -85,7 +85,7 @@ def test_ac_dtype():
                                    deltat=1,
                                    normalize=True,
                                    copy=True,
-                                   dtype=np.float_)
+                                   dtype=np.float64)
 
     ri = multipletau.autocorrelate(a=a,
                                    m=16,
@@ -102,9 +102,9 @@ def test_ac_dtype():
                                     dtype=None)
 
     assert ri.dtype == np.dtype(
-        np.float_), "if wrong dtype, dtype should default to np.float_"
+        np.float64), "if wrong dtype, dtype should default to np.float64"
     assert ri2.dtype == np.dtype(
-        np.float_), "if wrong dtype, dtype should default to np.float_"
+        np.float64), "if wrong dtype, dtype should default to np.float64"
     assert np.all(
         rf == ri), "result should be the same, because input us the same"
     assert np.all(
@@ -128,7 +128,7 @@ def test_ac_m():
                                       deltat=1,
                                       normalize=False,
                                       copy=True,
-                                      dtype=np.float_)
+                                      dtype=np.float64)
         res.append(r)
 
         # test minimal length of array
@@ -137,7 +137,7 @@ def test_ac_m():
                                   deltat=1,
                                   normalize=False,
                                   copy=True,
-                                  dtype=np.float_)
+                                  dtype=np.float64)
 
     res = np.concatenate(res)
     # np.save(os.path.dirname(__file__)
@@ -161,35 +161,35 @@ def test_ac_m_wrong():
                                    deltat=1,
                                    normalize=True,
                                    copy=True,
-                                   dtype=np.float_)
+                                   dtype=np.float64)
 
     r2 = multipletau.autocorrelate(a=a,
                                    m=15,
                                    deltat=1,
                                    normalize=True,
                                    copy=True,
-                                   dtype=np.float_)
+                                   dtype=np.float64)
 
     r3 = multipletau.autocorrelate(a=a,
                                    m=15.5,
                                    deltat=1,
                                    normalize=True,
                                    copy=True,
-                                   dtype=np.float_)
+                                   dtype=np.float64)
 
     r4 = multipletau.autocorrelate(a=a,
                                    m=14.5,
                                    deltat=1,
                                    normalize=True,
                                    copy=True,
-                                   dtype=np.float_)
+                                   dtype=np.float64)
 
     r5 = multipletau.autocorrelate(a=a,
                                    m=16.,
                                    deltat=1,
                                    normalize=True,
                                    copy=True,
-                                   dtype=np.float_)
+                                   dtype=np.float64)
     assert np.all(r1 == r2)
     assert np.all(r1 == r3)
     assert np.all(r1 == r4)
@@ -210,7 +210,7 @@ def test_ac_normalize():
                                       deltat=1,
                                       normalize=True,
                                       copy=True,
-                                      dtype=np.float_)
+                                      dtype=np.float64)
         res.append(r)
 
     res = np.concatenate(res)
@@ -235,7 +235,7 @@ def test_ac_simple():
                                       deltat=1,
                                       normalize=False,
                                       copy=True,
-                                      dtype=np.float_)
+                                      dtype=np.float64)
         res.append(r)
 
     res = np.concatenate(res)
