@@ -22,13 +22,13 @@ def test_corresponds_ac():
                                        m=m,
                                        copy=True,
                                        normalize=True,
-                                       dtype=np.float_)
+                                       dtype=np.float64)
 
     reslin = multipletau.correlate_numpy(a=1*a,
                                          v=1*a,
                                          copy=True,
                                          normalize=True,
-                                         dtype=np.float_)
+                                         dtype=np.float64)
 
     idx = np.array(restau[:, 0].real, dtype=int)[:m]
 
@@ -73,13 +73,13 @@ def test_corresponds_ac_first_loop():
                                        m=m,
                                        copy=True,
                                        normalize=False,
-                                       dtype=np.complex_)
+                                       dtype=np.complex128)
 
         reslin = multipletau.correlate_numpy(a=a,
                                              v=a.imag+1j*a.real,
                                              copy=True,
                                              normalize=False,
-                                             dtype=np.complex_)
+                                             dtype=np.complex128)
 
         idtau = np.where(restau[:, 0] == m+2)[0][0]
         tau3 = restau[idtau, 1]  # m+1 initial bins
@@ -102,13 +102,13 @@ def test_corresponds_ac_nonormalize():
                                        m=m,
                                        copy=True,
                                        normalize=False,
-                                       dtype=np.float_)
+                                       dtype=np.float64)
 
     reslin = multipletau.correlate_numpy(a=1*a,
                                          v=1*a,
                                          copy=True,
                                          normalize=False,
-                                         dtype=np.float_)
+                                         dtype=np.float64)
 
     idx = np.array(restau[:, 0].real, dtype=int)[:m+1]
 
@@ -128,13 +128,13 @@ def test_corresponds_cc():
                                    m=m,
                                    copy=True,
                                    normalize=True,
-                                   dtype=np.complex_)
+                                   dtype=np.complex128)
 
     reslin = multipletau.correlate_numpy(a=a,
                                          v=a.imag+1j*a.real,
                                          copy=True,
                                          normalize=True,
-                                         dtype=np.complex_)
+                                         dtype=np.complex128)
 
     idx = np.array(restau[:, 0].real, dtype=int)[:m+1]
 
@@ -154,13 +154,13 @@ def test_corresponds_cc_nonormalize():
                                    m=m,
                                    copy=True,
                                    normalize=False,
-                                   dtype=np.complex_)
+                                   dtype=np.complex128)
 
     reslin = multipletau.correlate_numpy(a=a,
                                          v=a.imag+1j*a.real,
                                          copy=True,
                                          normalize=False,
-                                         dtype=np.complex_)
+                                         dtype=np.complex128)
 
     idx = np.array(restau[:, 0].real, dtype=int)[:m+1]
 
